--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+  </parent>
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.wiperdog</groupId>
-  <artifactId>wiperdog</artifactId>
-  <version>0.1.0</version>
+  <artifactId>wiperdog-parent</artifactId>
+  <version>0.1.0-SNAPSHOT</version>
 
   <name>wiperdog parent pom</name>
   <description>parent pom for building wiperdog artifacts.</description>
